Changes for 2.2.9rc1

New features:
A.F....... [ZBX-1357] updated Slovak translation; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-9010] fixed audit actions not displaying most recent logs when record count exceeds maximum (Krists)
...G...PS. [ZBX-8555] fixed 'broken pipe' errors when executing remote commands. This was happening because pipe was closed without reading from it (wiper)
.......PS. [ZBX-8828] made ICMP items go unsupported if ICMP packets cannot be sent to their host (asaveljevs)
.......PS. [ZBX-9163] fixed SNMPERR_TOO_LONG error being wrongly treated as a network error; thanks to Santal for patch (asaveljevs)
...G...... [ZBX-6047] fixed system.boottime and system.uptime returning incorrect results on Solaris zones (asaveljevs)
........S. [ZBX-9176] fixed {DISCOVERY.SERVICE.NAME} macro to expand properly for HTTPS and Telnet services (asaveljevs)
.......PS. [ZBX-9154] fixed compilation error with Oracle backend (wiper)
..F....... [ZBX-9042] unified "mass update" spelling in trigger configuration page (Richlv)
..F....... [ZBX-9153] fixed vmware.version item key being listed as vmware.eventlog in the item key helper (Richlv)
..F....... [ZBX-8405] fixed typo in item key helper for system.cpu.num item description (asaveljevs)
..F....... [ZBX-8846] fixed non-existent page displaying (Oleg)
........S. [ZBX-9126] fixed processing of trigger/graph prototypes in case when all item prototypes in trigger/graph prototypes were changed (Sasha)

--------------------------------------------------------------------------------
Changes for 2.2.8

2.2.8rc1 was released as 2.2.8 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.8rc1

New features:
.......PS. [ZBX-4054] added support for SNMP values of type OID (asaveljevs)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Polish and Russian translations; thanks to Zabbix translators (Richlv)

Bug fixes: